--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "2.8.2",
     "@tailwindcss/vite": "4.1.8",
     "@tanstack/react-query": "5.79.2",
+    "aos": "^2.3.4",
     "axios": "^1.9.0",
     "lucide-react": "0.511.0",
     "react": "19.1.0",
