--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "9.2.0",
     "react-router": "7.6.1",
     "react-router-dom": "7.6.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "4.1.8"
   },
   "devDependencies": {
