--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "lucide-react": "0.511.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "5.5.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.1",
     "react-router-dom": "7.6.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "4.1.8"
+    "tailwindcss": "4.1.8",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
