add graph on home page and add drag and drop functionality on menuModal page

--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@tailwindcss/vite": "4.1.8",
     "@tanstack/react-query": "5.79.2",
     "aos": "^2.3.4",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "lucide-react": "0.511.0",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
     "react-icons": "5.5.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.1",
     "react-router-dom": "7.6.1",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "4.1.8"
