--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "5.5.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.1",
