--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "axios": "^1.9.0",
     "lucide-react": "0.511.0",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
     "react-icons": "5.5.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.1",
     "react-router-dom": "7.6.1",
+    "react-toastify": "^11.0.5",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "4.1.8",
